# milestone02

./: README.md  sample_data.json  test_compilation.sh
level-0/: README.md  first_word  first_word.c  fizzbuzz  fizzbuzz.c  ft_putstr.c  ft_strcpy.c  ft_strlen.c  ft_swap.c  repeat_alpha  repeat_alpha.c  rev_print  rev_print.c  rot_13  rot_13.c  rotone  rotone.c  search_and_replace  search_and_replace.c  ulstr  ulstr.c
level-1/: README.md  alpha_mirror.c  camel_to_snake.c  do_op.c  ft_atoi.c  ft_strcmp.c  ft_strcspn.c  ft_strdup.c  inter.c  is_power_of_2.c  last_word.c  max.c  print_bits.c  snake_to_camel.c  swap_bits.c  union.c
pymodules/: cria_estrutura.sh  main.py  pyproject.toml
pymodules/mod00/ex0/: ft_hello_garden.py
pymodules/mod00/ex1/: ft_plot_area.py
pymodules/mod00/ex2/: ft_harvest_total.py
pymodules/mod00/ex3/: ft_plant_age.py
pymodules/mod00/ex4/: ft_water_reminder.py
pymodules/mod00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
pymodules/mod00/ex6/: ft_garden_summary.py
pymodules/mod00/ex7/: ft_seed_inventory.py
pymodules/mod01/ex0/: ft_garden_intro.py
pymodules/mod01/ex1/: ft_garden_data.py
pymodules/mod01/ex2/: ft_plant_growth.py
pymodules/mod01/ex3/: ft_plant_factory.py
pymodules/mod01/ex4/: ft_garden_security.py
pymodules/mod01/ex5/: ft_plant_types.py
pymodules/mod01/ex6/: ft_garden_analytics.py
pymodules/mod02/ex0/: ft_first_exception.py
pymodules/mod02/ex1/: ft_different_errors.py
pymodules/mod02/ex2/: ft_custom_errors.py
pymodules/mod02/ex3/: ft_finally_block.py
pymodules/mod02/ex4/: ft_raise_errors.py
pymodules/mod02/ex5/: ft_garden_management.py
pymodules/mod03/ex0/: ft_command_quest.py
pymodules/mod03/ex1/: ft_score_analytics.py
pymodules/mod03/ex2/: ft_coordinate_system.py
pymodules/mod03/ex3/: ft_achievement_tracker.py
pymodules/mod03/ex4/: ft_inventory_system.py
pymodules/mod03/ex5/: 1  2  ft_data_stream.py
pymodules/mod03/ex6/: ft_analytics_dashboard.py
pymodules/mod04/: sample_data.json
pymodules/mod04/ex0/: ft_ancient_text.py
pymodules/mod04/ex1/: ft_archive_creation.py
pymodules/mod04/ex2/: ft_stream_management.py
pymodules/mod04/ex3/: access_log.txt  ft_vault_security.py
pymodules/mod04/ex4/: ft_crisis_response.py
pymodules/mod05/ex0/: stream_processor.py
pymodules/mod05/ex1/: data_stream.py
pymodules/mod05/ex2/: nexus_pipeline.py
pymodules/mod06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
pymodules/mod06/alchemy/: potions.py
pymodules/mod06/alchemy/grimoire/: spellbook.py  validator.py
pymodules/mod06/alchemy/transmutation/: advanced.py  basic.py
pymodules/mod07/ex0/: Card.py  CreatureCard.py  ex0.main  main.py
pymodules/mod07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
pymodules/mod07/ex2/: Combatable.py  EliteCard.py  Magical.py  main.py
pymodules/mod07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  main.py
pymodules/mod07/ex4/: Rankable.py  TournamentCard.py  TournamentPlatform.py  main.py
(+31 files in other folders)
